--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
-<!doctype html>
+Código que uso para colocar o pixel no github como mostro no video, troque onde está escrito "seu pixel aqui" pelo seu numero de pixel, sem as aspas:
+
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guia da Palavra – Método 3P | Comece 2026 com Deus</title>
-    <meta name="description" content="Transforme seu estudo bíblico com o Método 3P. Entenda a Bíblia de forma simples e profunda. Bônus especial de Natal incluído!" />
-    <meta name="author" content="Guia da Palavra" />
-    <meta name="keywords" content="estudo bíblico, devocional, método 3P, bíblia, cristão, natal, esperança" />
+    <!-- ... metatags e fontes ... -->
 
-    <meta property="og:title" content="Guia da Palavra – Método 3P | Comece 2026 com Deus" />
-    <meta property="og:description" content="Transforme seu estudo bíblico com o Método 3P. Entenda a Bíblia de forma simples e profunda." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@GuiaDaPalavra" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="canonical" href="https://guiadapalavra.com.br/pagina-vendas" />
+      fbq('init', '871274541904785');
+      fbq('track', 'PageView');
+    </script>
+    <!-- End Facebook Pixel Code -->
   </head>
-
   <body>
+    <!-- Facebook Pixel Noscript -->
+    <noscript>
+      <img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=SEU PIXEL AQUI&ev=PageView&noscript=1"/>
+    </noscript>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
